--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,7 +103,7 @@ body{
 }
 /*ESTILOS PARA HEADER MOBILE Y TABLET*/
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
     .header{
         height: initial;
         .navegacion{
@@ -131,7 +131,7 @@ body{
             }
         }
     }
-}
+}*/
 /*ESTILOS PARA MAIN ESCRITORIO*/
 .main{
     .sectionPrincipal{
@@ -495,7 +495,7 @@ body{
     }
 }
 /*ESTILOS FOOTER CELULAR Y TABLET CHICA*/
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
     .footer{
         height: initial;
         padding-top:15px;
@@ -516,7 +516,7 @@ body{
         }
     }
 }
-
+*/
 
 
 
@@ -629,7 +629,7 @@ body{
 }
 
 /*media querys para mobile PAGINA registrarse*/
-@media (max-width: 1200px) {
+/*@media (max-width: 1200px) {
     .bodyRegistrarse{
         .headerRegistrarse{
             padding:20px;
@@ -676,7 +676,7 @@ body{
         }
     }
 
-}
+}*/
 
 /*ESTILOS ESCRITORIO Detalle */
 .mainDetalle{
@@ -719,7 +719,7 @@ body{
 
 }
 /*ESTILOS MOBILE Y TABLETS DETALLE*/
-@media screen and (max-width:1200px){
+/*@media screen and (max-width:1200px){
     .mainDetalle{
         .detalle{
             height: initial;
@@ -775,7 +775,7 @@ body{
         }
     }
 }
-
+*/
 hr{
     border: 1px solid #7212F4;
     width: 80%;
